cmake_minimum_required(VERSION 3.17)
project(cmake-options)

if (NOT DEFINED CACHE{OPTION_A} OR NOT OPTION_A STREQUAL "foo-bar")
    message(SEND_ERROR "Failed - OPTION_A=\"${OPTION_A}\"")
else()
    list(LENGTH OPTION_A OPTION_A_LEN)
    if (NOT OPTION_A_LEN EQUAL 1)
        message(SEND_ERROR "Failed - OPTION_A_LEN=${OPTION_A_LEN}")
    endif()
    get_property(OPTION_A_TYPE CACHE OPTION_A PROPERTY TYPE)
    if (NOT OPTION_A_TYPE STREQUAL "UNINITIALIZED")
        message(SEND_ERROR "Failed - OPTION_A_TYPE=${OPTION_A_TYPE}")
    endif()
endif()

if (NOT DEFINED CACHE{OPTION_B} OR NOT OPTION_B STREQUAL "foo\;bar")
    message(SEND_ERROR "Failed - OPTION_B=\"${OPTION_B}\"")
else()
    list(LENGTH OPTION_B OPTION_B_LEN)
    if (NOT OPTION_B_LEN EQUAL 1)
        message(SEND_ERROR "Failed - OPTION_B_LEN=${OPTION_B_LEN}")
    endif()
    get_property(OPTION_B_TYPE CACHE OPTION_B PROPERTY TYPE)
    if (NOT OPTION_B_TYPE STREQUAL "UNINITIALIZED")
        message(SEND_ERROR "Failed - OPTION_B_TYPE=${OPTION_B_TYPE}")
    endif()
endif()

if (NOT DEFINED CACHE{OPTION_C} OR NOT OPTION_C STREQUAL "foo;bar")
    message(SEND_ERROR "Failed - OPTION_C=\"${OPTION_C}\"")
else()
    list(LENGTH OPTION_C OPTION_C_LEN)
    if (NOT OPTION_C_LEN EQUAL 2)
        message(SEND_ERROR "Failed - OPTION_C_LEN=${OPTION_C_LEN}")
    endif()
    get_property(OPTION_C_TYPE CACHE OPTION_C PROPERTY TYPE)
    if (NOT OPTION_C_TYPE STREQUAL "UNINITIALIZED")
        message(SEND_ERROR "Failed - OPTION_C_TYPE=${OPTION_C_TYPE}")
    endif()
endif()

if (NOT DEFINED CACHE{OPTION_D} OR NOT OPTION_D)
    message(SEND_ERROR "Failed - OPTION_D=\"${OPTION_D}\"")
else()
    list(LENGTH OPTION_D OPTION_D_LEN)
    if (NOT OPTION_D_LEN EQUAL 1)
        message(SEND_ERROR "Failed - OPTION_D_LEN=${OPTION_D_LEN}")
    endif()
    get_property(OPTION_D_TYPE CACHE OPTION_D PROPERTY TYPE)
    if (NOT OPTION_D_TYPE STREQUAL "BOOL")
        message(SEND_ERROR "Failed - OPTION_D_TYPE=${OPTION_D_TYPE}")
    endif()
endif()

if (NOT DEFINED CACHE{OPTION_E} OR NOT OPTION_E STREQUAL "/usr/bin/bash")
    message(SEND_ERROR "Failed - OPTION_E=\"${OPTION_E}\"")
else()
    list(LENGTH OPTION_E OPTION_E_LEN)
    if (NOT OPTION_E_LEN EQUAL 1)
        message(SEND_ERROR "Failed - OPTION_E_LEN=${OPTION_E_LEN}")
    endif()
    get_property(OPTION_E_TYPE CACHE OPTION_E PROPERTY TYPE)
    if (NOT OPTION_E_TYPE STREQUAL "FILEPATH")
        message(SEND_ERROR "Failed - OPTION_E_TYPE=${OPTION_E_TYPE}")
    endif()
endif()

if (LINUX)
    set(OPTION_F_CMP "/some/linux/specific/path" "/usr/some/path")
elseif(WIN32)
    set(OPTION_F_CMP "/some/windows/specific/path" "/usr/some/path")
elseif(APPLE)
    set(OPTION_F_CMP "/some/macos/specific/path" "/usr/some/path")
else()
    set(OPTION_F_CMP "/usr/some/path")
endif()
if (NOT DEFINED CACHE{OPTION_F} OR NOT OPTION_F STREQUAL OPTION_F_CMP)
    message(SEND_ERROR "Failed - OPTION_F=\"${OPTION_F}\"")
else()
    list(LENGTH OPTION_F OPTION_F_LEN)
    list(LENGTH OPTION_F_CMP OPTION_F_CMP_LEN)
    if (NOT OPTION_F_LEN EQUAL OPTION_F_CMP_LEN)
        message(SEND_ERROR "Failed - OPTION_F_LEN=${OPTION_F_LEN}")
    endif()
    get_property(OPTION_F_TYPE CACHE OPTION_F PROPERTY TYPE)
    if (NOT OPTION_F_TYPE STREQUAL "UNINITIALIZED")
        message(SEND_ERROR "Failed - OPTION_F_TYPE=${OPTION_F_TYPE}")
    endif()
endif()

file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/__init__.py" "# Empty")
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/__init__.py"
    DESTINATION "${PY_BUILD_CMAKE_MODULE_NAME}")
