[project]
name = "cmake_options"
version = "0.2.0a13.dev0"
description = "Checks parsing and escaping of CMake options"
readme = "README.md"
requires-python = ">=3.7"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Pieter P", "email" = "pieter.p.dev@outlook.com" }]
keywords = ["example"]
classifiers = []
urls = { "Documentation" = "https://tttapa.github.io/" }
dependencies = []

[build-system]
requires = ["py-build-cmake~=0.2.0a13.dev0"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt"]

[tool.py-build-cmake.module]
generated = "package"

[tool.py-build-cmake.cmake]
minimum_version = "3.17"
[tool.py-build-cmake.cmake.options]
OPTION_A = "foo-bar"
OPTION_B = "foo;bar"
OPTION_C = ["foo", "bar"]
OPTION_D = true
OPTION_E = {"value" = "/usr/bin/bash", "type" = "FILEPATH"}
