[project]
name = "cmake-preset"
version = "0.3.4.dev0"
description = "Test the use of CMake presets"
readme = "README.md"
requires-python = ">=3.7"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Pieter P", "email" = "pieter.p.dev@outlook.com" }]

[build-system]
requires = ["py-build-cmake~=0.3.4.dev0"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
generated = "package"

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "generate.py", "CMakePresets.json"]

[tool.py-build-cmake.cmake]
minimum_version = "3.21"
preset = "the-cmake-preset"
install_components = ["python_modules"]

[tool.pytest.ini_options]
testpaths = ["tests"]
