[project]
name = "empty-config"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ "name" = "Pieter P", "email" = "pieter.p.dev@outlook.com" }]
dynamic = ["version", "description"]

[build-system]
requires = ["py-build-cmake~=0.5.0"]
build-backend = "py_build_cmake.build"
