[project]
name = "namespace-project-a" # Name on PyPI
version = "0.3.4.dev0"
readme = "README.md"
description = "Part A of a namespace package"
requires-python = ">=3.7"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Pieter P", "email" = "pieter.p.dev@outlook.com" }]
keywords = ["example", "addition", "pybind11"]
classifiers = []
urls = { "Documentation" = "https://tttapa.github.io/" }
dependencies = []

[build-system]
requires = [
    "py-build-cmake~=0.3.4.dev0",
    "pybind11~=2.13.6",
    "pybind11-stubgen~=2.5.1",
]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
name = "namespace_project" # Import name
directory = "python-src"
namespace = true

[tool.py-build-cmake.editable]
mode = "hook"

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "cmake/*.cmake", "src/*.cpp", "src/*.hpp"]
exclude = []

[tool.py-build-cmake.cmake]
minimum_version = "3.18"
build_type = "Release"
source_path = "." # Containing CMakeLists.txt
build_args = ["-j"]
install_components = ["python_modules", "python_stubs"]

[tool.py-build-cmake.stubgen]
packages = ["namespace_project.add_module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
