[project]
name = "namespace-project-b" # Name on PyPI
version = "0.3.4.dev0"
readme = "README.md"
description = "Part B of a namespace package"
requires-python = ">=3.7"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Pieter P", "email" = "pieter.p.dev@outlook.com" }]
keywords = ["example", "subtraction"]
classifiers = []
urls = { "Documentation" = "https://tttapa.github.io/" }
dependencies = []

[build-system]
requires = [
    "py-build-cmake~=0.3.4.dev0",
]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
name = "namespace_project" # Import name
directory = "python-src"
namespace = true

[tool.py-build-cmake.editable]
mode = "hook"

[tool.py-build-cmake.stubgen]
packages = ["namespace_project.sub_module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
