[project]
name = "minimal-comp-debug"
readme = "README.md"
requires-python = ">=3.7"
license = { "file" = "../LICENSE" }
authors = [{ "name" = "Pieter P", "email" = "pieter.p.dev@outlook.com" }]
keywords = ["example", "addition", "subtraction", "debug"]
classifiers = []
urls = { "Documentation" = "https://tttapa.github.io/" }
dependencies = ["minimal-comp==0.2.0a13"]
version = "0.2.0a13"
description = "Debug symbols for the minimal package."

[build-system]
requires = ["py-build-cmake~=0.2.0a13"]
build-backend = "py_build_cmake.build_component"

[tool.py-build-cmake.component]
main_project = ".."
install_components = ["python_modules_debug"]
install_only = true
