[project]
name = "minimal-comp-debug"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ "name" = "Pieter P", "email" = "pieter.p.dev@outlook.com" }]
keywords = ["example", "addition", "subtraction", "debug"]
classifiers = []
urls = { "Documentation" = "https://tttapa.github.io/" }
dependencies = ["minimal-comp==0.5.0b1"]
version = "0.5.0b1"
description = "Debug symbols for the minimal package."

[build-system]
requires = ["py-build-cmake~=0.5.0b1"]
build-backend = "py_build_cmake.build_component"

[tool.py-build-cmake]
main_project = ".."
[tool.py-build-cmake.component]
install_components = ["python_modules_debug"]
install_only = true
